Fix up spacing and track name

--- a/packages/experimental/src/experimental-list/task-item.scss
+++ b/packages/experimental/src/experimental-list/task-item.scss
@@ -4,7 +4,7 @@ $task-alert-yellow: #f0b849;
 .woocommerce-task-list__item {
 	position: relative;
 	display: grid;
-	grid-template-columns: 48px auto 24px;
+	grid-template-columns: 72px auto 48px;
 
 	// IE doesn't support `align-items` on grid container
 
@@ -52,7 +52,7 @@ $task-alert-yellow: #f0b849;
 	.woocommerce-task-list__item-before {
 		display: flex;
 		align-items: center;
-		padding: $gap 20px $gap $gap-large;
+		padding-left: $gap-large;
 	}
 
 	.woocommerce-task-list__item-text {
@@ -75,8 +75,6 @@ $task-alert-yellow: #f0b849;
 	}
 
 	.woocommerce-task-list__item-after {
-		margin-left: $gap;
-		margin-right: $gap-large;
 		display: flex;
 		align-items: center;
 	}
